Added implementation for ZelauxModCore